# Qlatt

./: .gitignore  CLAUDE.md  Cargo.toml  PROMPT.md  README.md  build.ps1  build.sh  frontend-spec-feedback-1.md  index.html  integration.spec.js  klatt-synth-helpers.spec.js  klatt-synth.js  klatt-synth.spec.js  main.js  noise-source-processor.js  noise-source-processor.spec.js  package-lock.json  package.json  radiation-processor.js  radiation-processor.spec.js  tsconfig.json  tts-frontend-rules.js  tts-frontend.js  tts-frontend.spec.js  vite.config.js  vitest.config.js  voicing-source-processor.js  voicing-source-processor.spec.js
docs/: yaml-graph-tests.md
investigations/: f-formants.md  hissing-breathing.md  stop-clicks.md
notes/: Klatt1980.md  Klatt1987.md  Perrotin2021-LF_LM.md  STATUS.md
old/: index.html  integration.spec.js  klatt-synth-helpers.spec.js  klatt-synth.js  klatt-synth.spec.js  main.js  noise-source-processor.js  noise-source-processor.spec.js  package-lock.json  package.json  tts-frontend.js  tts-frontend.spec.js  vitest.config.js  voicing-source-processor.js  voicing-source-processor.spec.js
papers/: CLAUDE.md
prompts/: 16bit-audit-scout.md  16bit-conversion-guide.md  16bit-issue1-f0scaling.md  16bit-issue10-sw1.md  16bit-issue11-coder.md  16bit-issue11-dbtolinear.md  16bit-issue12-coder.md  16bit-issue12-differentiator.md  16bit-issue12b-coder.md  16bit-issue13-170x.md  16bit-issue14-cascade.md  16bit-issue15-defaults.md  16bit-issue2-ah-offset.md  16bit-issue2-coder.md  16bit-issue3-avs.md  16bit-issue3-coder.md  16bit-issue4-coder.md  (+7 more)
(+680 files in other folders)
