[workspace]
members = [
  "crates/klatt-wasm-common",
  "crates/resonator",
  "crates/antiresonator",
  "crates/lf-source",
  "crates/signal-switch",
  "crates/edge-detector",
  "crates/decay-envelope",
  "crates/square-source",
  "crates/triangular-source",
  "crates/impulsive-source",
  "crates/tilt-filter",
  "crates/pitch-sync-mod",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
